--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -1,57 +1,57 @@
-<li><a href="{{ "/" | relative_url }}">Home</a></li>
-<li>
+<li style="font-weight: bold;"><a href="{{ "/" | relative_url }}">Home</a></li>
+<li style="font-weight: bold;">
   <a href="{{ "/tools" | relative_url }}">Tools</a>
   {% assign groups = site.data.tools | group_by: "category" | sort: "name" %}
   <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
     <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
       {% for group in groups %}
         {% for item in group.items %}
-          <li><a href="{{ item.url }}">{{ item.name }}</a></li>
+          <li style="font-weight: bold;"><a href="{{ item.url }}">{{ item.name }}</a></li>
         {% endfor %}
       {% endfor %}
     </ul>
   </div>
 </li>
 
-<li>
+<li style="font-weight: bold;" >
   <a href="{{ "/maps" | relative_url }}">Maps</a>
 </li>
 
-<li>
+<li style="font-weight: bold;">
   <a href="{{ "/resources" | relative_url }}">Genomics</a>
 </li>
 
-<li>
+<li style="font-weight: bold;">
   <a href="{{ "/collections" | relative_url }}">Data Collections</a>
   {% assign genus_description = site.data.datastore-metadata.Glycine.GENUS.about_this_collection.description_Glycine %}
   <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
     <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
       {% for species in genus_description.species %}
         {% comment %} <li> <a href="/collections{{ species | downcase | relative_url }}"> {{ species }}</a></li> {% endcomment %}
-        <li> <a href="/collections{{ downcase | relative_url }}"> {{ species }}</a></li>
+        <li style="font-weight: bold;"> <a href="/collections{{ downcase | relative_url }}"> {{ species }}</a></li>
       {% endfor %}
     </ul>
   </div>
 </li>
 
-<li>
+<li style="font-weight: bold;">
   <a class="project_list" href="{{ "/projects" | relative_url }}">Projects</a>
   {% if site.data.project_list %}
   {% assign groups = site.data.project_list | sort: "year" %}
   <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="toggle: .project_list; delay-hide: 0;">
     <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
     {% for group in groups %}
-      <li><a href="{{ group.DataStoreID | downcase | prepend: '/projects/' | relative_url }}">{{ group.short_title }}</a></li>
+      <li style="font-weight: bold;"><a href="{{ group.DataStoreID | downcase | prepend: '/projects/' | relative_url }}">{{ group.short_title }}</a></li>
     {% endfor %}
     </ul>
   </div>
   {% endif %}
 </li>
 
-<li><a href="{{ "/community" | relative_url }}">Community</a></li>
+<li style="font-weight: bold;"><a href="{{ "/community" | relative_url }}">Community</a></li>
 
-<li><a href="{{ "/about" | relative_url }}">About & Contact</a></li>
+<li style="font-weight: bold;"><a href="{{ "/about" | relative_url }}">About & Contact</a></li>
 
-<li><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></li>
+<li style="font-weight: bold;"><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></li>
 
 
