--- a/_includes/off-screen-menu.html
+++ b/_includes/off-screen-menu.html
@@ -1,14 +1,14 @@
 <ul class="uk-nav-default uk-nav-parent-icon" uk-nav>
-  <li><a href="{{ "/" | relative_url }}">Home</a></li>
-  <li><a href="{{ "/tools" | relative_url}}">Tools</a></li>
-  <li><a href="{{ "/maps" | relative_url}}">Maps</a></li>
-  <li><a href="{{ "/resources" | relative_url}}">Genomics</a></li>
-  <li><a href="{{ "/collections" | relative_url}}">Data Collections</a></li>
-  <li><a href="{{ "/projects" | relative_url}}">Projects</a></li>
-  <li><a href="{{ "/community" | relative_url}}">Community</a></li>
-  <li><a href="{{ "/about" | relative_url}}">About & Contact</a></li>
-  <li><a href="{{ "/help" | relative_url}}">Help & Tutorials</a></li>
+  <li><a href="{{ site.base_path }}/">Home</a></li>
+  <li><a href="{{ site.base_path }}/tools/">Tools</a></li>
+  <li><a href="{{ site.base_path }}/maps/">Maps</a></li>
+  <li><a href="{{ site.base_path }}/resources/">Genomics</a></li>
+  <li><a href="{{ site.base_path }}/collections/">Data Collections</a></li>
+  <li><a href="{{ site.base_path }}/projects/">Projects</a></li>
+  <li><a href="{{ site.base_path }}/community/">Community</a></li>
+  <li><a href="{{ site.base_path }}/about/">About & Contact</a></li>
+  <li><a href="{{ site.base_path }}/help/">Help & Tutorials</a></li>
   <li class="uk-nav-divider"></li>
-  <li><a href="{{ "/news" | relative_url}}">News</a></li>
-  <li><a href="{{ "/events" | relative_url}}">Events</a></li>
+  <li><a href="{{ site.base_path }}/news/">News</a></li>
+  <li><a href="{{ site.base_path }}/events/">Events</a></li>
 </ul>
