--- a/_includes/blog-card.html
+++ b/_includes/blog-card.html
@@ -14,6 +14,6 @@
     </ul>
   </div>
   <div class="uk-card-footer">
-    <a href="{{ "/blog" | relative_url }}" class="uk-button uk-button-text">More Blog Posts</a>
+    <a href="{{ site.base_path }}/blog/" class="uk-button uk-button-text">More Blog Posts</a>
   </div>
 </div>
