--- a/_includes/global-scripts.html
+++ b/_includes/global-scripts.html
@@ -1,5 +1,5 @@
 <!-- place globally-included scripts here -->
 
 <!-- experimenting with the JS compiled under jekyll-data-js -->
-<script src="{{ "assets/js/lis-data.js" | relative_url }}"></script>
+<script src="{{ site.base_path }}/assets/js/lis-data.js"></script>
 
