--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,31 +4,31 @@
   <title>{% if page.title %}{{ page.title | strip_html }} &#8211; {% endif %}{{ site.title | strip_html }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{% if page contains "meta_description" %}{{ page.meta_description | xml_escape }}{% elsif page contains "summary" %}{{ page.summary | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
-  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="{{ "/manifest.json" | relative_url }}" />
+  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="{{ site.base_path }}/manifest.json" />
   {% if page contains "meta_robots" %}<meta name="robots" content="{{ page.meta_robots }}">
   {% else %}<meta name="robots" content="all">{% endif %}
   <meta name="author" content="{{ site.author }}">
   {% if site contains "fb_page" %}<meta property="fb:pages" content="{{ site.fb_page_id }}" />{% endif %}
   {% if page contains "categories" %}<meta name="keywords" content="{{ page.categories | join: ', ' }}">{% endif %}
   <link rel="canonical" href="{{ page.url | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title }}" href="{{ "/feed.xml" | relative_url }}" />
+  <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title }}" href="{{ site.base_path }}/feed.xml" />
   {% if site contains "google_analytics" %}
   {% include analytics.html %}
   {% endif %}
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="{{ "assets/css/uikit-theme.css" | relative_url }}" type="text/css" />
+  <link rel="stylesheet" href="{{ site.base_path }}/assets/css/uikit-theme.css" type="text/css" />
   
   {% include global-stylesheets.html %}
 
   <!-- Custom JS -->
-  <script src="{{ "assets/js/uikit.min.js" | relative_url }}"></script>
-  <script src="{{ "assets/js/uikit-icons.min.js" | relative_url }}"></script>
+  <script src="{{ site.base_path }}/assets/js/uikit.min.js"></script>
+  <script src="{{ site.base_path }}/assets/js/uikit-icons.min.js"></script>
 
   {% include global-scripts.html %}
 
   <!-- Icons -->
-  <link rel="icon" type="image/png" href="{{ "/assets/icons/favicon-96x96.png" | relative_url }}" sizes="96x96">
-  <link rel="icon" type="image/png" href="{{ "/assets/icons/favicon-32x32.png" | relative_url }}" sizes="32x32">
-  <link rel="icon" type="image/png" href="{{ "/assets/icons/favicon-16x16.png" | relative_url }}" sizes="16x16">
-  <link rel="shortcut icon" href="{{ "/assets/icons/favicon.ico" | relative_url }}">
+  <link rel="icon" type="image/png" href="{{ site.base_path }}/assets/icons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="{{ site.base_path }}/assets/icons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ site.base_path }}/assets/icons/favicon-16x16.png" sizes="16x16">
+  <link rel="shortcut icon" href="{{ site.base_path }}/assets/icons/favicon.ico">
 </head>
