--- a/_includes/news-card.html
+++ b/_includes/news-card.html
@@ -13,11 +13,11 @@
         {% assign newsLimit = site.news_card_item_limit %}
       {% endif %}
       {% for post in site.categories.news limit:newsLimit %}
-      <li><a href="{{ post.url }}"><b>{{ post.title }}</b></a></li>
+      <li><a href="{{ site.base_path }}/{{ post.url }}"><b>{{ post.title }}</b></a></li>
       {% endfor %}
     </ul>
   </div>
   <div class="uk-card-footer">
-    <a href="{{ "/news" | relative_url }}" class="uk-button uk-button-text">More News</a>
+    <a href="{{ site.base_path }}/news/" class="uk-button uk-button-text">More News</a>
   </div>
 </div>
