--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -48,7 +48,7 @@
       <div class="uk-navbar-left uk-text-truncate">
         <a class="uk-navbar-item uk-logo uk-text-truncate" href="{{ site.base_path }}/">
           {% if site.logo %}
-          <img class="uk-margin-small-right" src="{{ site.base_path }}/{{ site.logo }}" width="47" height="47" />
+          <img class="uk-margin-small-right" src="{{ site.base_path }}{{ site.logo }}" width="47" height="47" />
           {% endif %}
           <div class="uk-text-truncate">
             {{ site.title }}
