--- a/_includes/tools-menu.html
+++ b/_includes/tools-menu.html
@@ -10,7 +10,7 @@
     {% if url_start == "http" %}
       <li uk-tooltip="title: {{ item.description }}"><a href="{{ item.url }}">{{ item.name }}</a></li>
     {% else %}
-      <li uk-tooltip="title: {{ item.description }}"><a href="{{ site.base_path }}/{{ item.url }}">{{ item.name }}</a></li>
+      <li uk-tooltip="title: {{ item.description }}"><a href="{{ site.base_path }}{{ item.url }}">{{ item.name }}</a></li>
     {% endif %}
   {% endfor %}
 </ul>
