--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -32,6 +32,8 @@
   body {
     color: black;
     background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16pt;
   }
 </style>
 
