--- a/_layouts/nam_lines.html
+++ b/_layouts/nam_lines.html
@@ -37,5 +37,32 @@ layout: default
   </tr>
 </table>
 
+
+{% assign data_url_base = "https://soybase.org/data/annex/Glycine/max/projects/SoyNAM/" %}
+{% capture phenotype_data %}{{ display_name }}_{{ nam_details.Population }}_phenotype_data.tsv.gz{% endcapture %}
+{% capture genotype_Wm82a1 %}{{ display_name }}_{{ nam_details.Population }}_4312_SNP_genotype_Wm82.a1.tsv.gz{% endcapture %}
+{% capture gt_Wm82a2 %}{{ display_name }}_{{ nam_details.Population }}_4312_SNP_genotype_Wm82.a2.tsv.gz{% endcapture %}
+
+<h4>Population Phenotype Data</h4>
+<p>Replicated trials were used to measure yield, maturity, plant height,... for the NAM Parents and RILs.</p>
+
+<ul>
+<li>
+  <a href="{{ data_url_base }}phenotypes/{{ phenotype_data }}">
+    Download the phenotypic data for this SoyNAM Family
+  </a>
+</li>
+<li>
+  <a href="{{ data_url_base }}genotypes/Wm82.a1/{{ genotype_Wm82a1 }}">
+    Download the SNP haplotypes for the parents and progeny for this SoyNAM family using Wm82.a1 coordinates
+  </a>
+</li>
+<li>
+  <a href="{{ data_url_base }}genotypes/Wm82.a2/{{ gt_Wm82a2 }}">
+    Download the SNP haplotypes for the parents and progeny for this SoyNAM family using Wm82.a2 coordinates
+  </a>
+</li>
+</ul>
+
 <h4><a href="/projects/SoyNAM/">Back to the SoyNAM index page</a></dd></h4>
 
