--- a/_layouts/parentage.html
+++ b/_layouts/parentage.html
@@ -8,27 +8,36 @@ layout: default
 <h2>Soy Parentage and Pedigrees</h2>
 
 <p> 
-The soybean parentage information in this database was partially gleaned from the Uniform Soybean Tests for the
-<a href="https://www.ars.usda.gov/southeast-area/stoneville-ms/crop-genetics-research/docs/uniform-soybean-tests/">Southern</a>
-and
-<a href="https://www.ars.usda.gov/midwest-area/west-lafayette-in/crop-production-and-pest-control-research/docs/uniform-soybean-tests-northern-region/">Northern</a>
-regions as well as other sources such as USDA technical bulletins, variety registrations and PVP applications.
-The strains that appear here were part of the uniform trials and not the preliminary trials. In most cases, the pedigree of
-individual strains was followed back to named strains in both maternal and paternal lineages where possible. In some cases,
-the parentage of strains was not specified by the cooperators in the tests. In those cases the maternal and paternal parents
-are labeled as "Unspecified". In some cases, the actual parental information is partially or completely unknown. In those
-cases the unknown parentages is labeled with "Unknown". When available, synonyms for the strains were also collected. If a
-strain was named its PI number was also included as a synonym. In cases where the strain was found to be covered by PVP
-protection, the PVP registration number was also included. Because of the sources used, not all named soybean strains are
-listed. For additional information the user should consult the Germplasm Resources Information Network (GRIN)
-<a href="https://npgsweb.ars-grin.gov/gringlobal/search">search page</a>.
+The soybean parentage information below was partially gleaned from the Uniform Soybean Tests for the 
+<a href="https://www.ars.usda.gov/southeast-area/stoneville-ms/crop-genetics-research/docs/uniform-soybean-tests/"><b>Southern</b></a>
+and 
+<a href="https://www.ars.usda.gov/midwest-area/west-lafayette-in/crop-production-and-pest-control-research/docs/uniform-soybean-tests-northern-region/"><b>Northern</b></a> 
+regions as well as other sources such as USDA technical bulletins, variety registrations and PVP applications. 
+The strains that appear here were part of the uniform trials and not the preliminary trials. The pedigree of 
+individual strains was followed back to named strains in both maternal and paternal lineages where possible. 
+An unknown parent is indicated with "-". When available, synonyms for the strains were also collected. 
+The PVP registration number is noted when known. Because of the sources used, not all named soybean strains are listed. 
+If a strain was named and it is in Germplasm Resources Information Network (GRIN), the PI number is noted as a synonym. 
+Check for additional information about PI lines at the <a href="https://npgsweb.ars-grin.gov/gringlobal/search"><b>GRIN search page</b></a>.
 </p>
 
 <p>
 Strain names are prefixed with a code that identifies the program that produced them. The code is usually the first two
-letters in the strain name followed by the year it was released as a two digit number. A description of the code prefixes can
-be found here. Strains originating from Pioneer Hybrid generally begin with the letter "P" followed by 4 digits ie P2345.
-Some Pioneer strains have names of the form P followed by two digits followed by one letter followed by two digits ie P49M23.
+letters in the strain name followed by the year it was released as a two digit number. 
+See <a href="/tools/parentage/prefix_codes"><b>code prefixes and descriptions here</b></a>. 
+</p>
+
+<p>
+Pedigrees are represented in column 4. To give an example: 
+<a href="/tools/parentage/groupc/"><u><b>CS31</b></u></a> has parents <u>S10</u> (maternal) and <u>Mitchell</u> (paternal). 
+The pedigree string <u>( S10 , Mitchell ( Amsoy , Wayne ) )</u> 
+can be read as: <u>CS31</u> is progeny of <u>S10</u> and <u>Mitchell</u>; 
+and <u>Mitchell</u> is progeny of <u>Amsoy</u> and <u>Wayne</u>.
+</p>
+
+<p>
+The information below is also available for <a href=""><b>download</b></a> - for example, 
+if you wish to filter on pedigrees that contain an accession of interest.
 </p>
 
 <p><b>Browse or search accessions beginning with ...</b><p>
