update to use uk-flex-inline instead of inline style

--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -1,4 +1,4 @@
-<div style="display: flex; flex-direction: row; gap: 15px;">
+<div class="uk-flex-inline" style="gap: 15px">
   <li><a href="{{ "/" | relative_url }}">Home</a></li>
   <li>
     <a href="{{ "/tools" | relative_url }}">Tools</a>
