--- a/_includes/card-item.html
+++ b/_includes/card-item.html
@@ -1,1 +1,1 @@
-<li><a href="{{ include.url }}"><b>{{ include.title }}</b></a>{% if include.meta %} <div>{{ include.meta }}</div>{% endif %}</li>
+<li><a href="{{ include.url }}"><b>{{ include.title }}</b></a>{% if include.meta %}<div style="color: black">{{ include.meta }}</div>{% endif %}</li>
