--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -35,9 +35,9 @@
   </li>
 
   <li>
-    <a class="project_list" href="{{ "/projects" | relative_url }}">Projects</a>
-    {% if site.data.project_list %}
-    {% assign groups = site.data.project_list | sort: "short_title" %}
+    <a class="projects" href="{{ "/projects" | relative_url }}">Projects</a>
+    {% if site.data.projects %}
+    {% assign groups = site.data.projects | sort: "short_title" %}
     <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
       <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
       {% for group in groups %}
