add <li> color: black to global-stylesheets

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -29,6 +29,10 @@
       font-family: serif;
       font-weight: bold;
   }
+  li {
+    color: black;
+  }
+  
   body {
     color: black;
     background-color: white;
