add custom hover effect and nav link color

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -29,9 +29,15 @@
       font-family: serif;
       font-weight: bold;
   }
-  li {
+
+  .nav-item {
     color: black;
   }
+
+  .nav-item:hover {
+    color: #235626;
+  }
+
   
   body {
     color: black;
