--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -1,3 +1,9 @@
+<!-- <style>
+  .nav-item {
+    color: red;
+  }
+</style> -->
+
 <div class="uk-flex-inline" style="gap: 15px">
   <li><a href="{{ "/" | relative_url }}">Home</a></li>
   <li>
@@ -7,7 +13,7 @@
       <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
         {% for group in groups %}
           {% for item in group.items %}
-            <li><a href="{{ item.url }}" target="{{item.target}}">{{ item.name }}</a></li>
+            <li class="nav-item"><a href="{{ item.url }}" target="{{item.target}}">{{ item.name }}</a></li>
           {% endfor %}
         {% endfor %}
       </ul>
@@ -28,7 +34,7 @@
     <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
       <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
         {% for species in genus_description.species %}
-          <li> <a href="/collections/#{{ genus_description.genus }}_{{ species }}"> {{ species }}</a></li>
+          <li class="nav-item"><a href="/collections/#{{ genus_description.genus }}_{{ species }}"> {{ species }}</a></li>
         {% endfor %}
       </ul>
     </div>
@@ -41,7 +47,7 @@
     <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
       <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
       {% for group in groups %}
-        <li><a href="{{ group.DataStoreID | downcase | prepend: '/projects/' | relative_url }}">{{ group.short_title }}</a></li>
+        <li class="nav-item"><a href="{{ group.DataStoreID | downcase | prepend: '/projects/' | relative_url }}">{{ group.short_title }}</a></li>
       {% endfor %}
       </ul>
     </div>
