--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -1,16 +1,12 @@
-<!-- <style>
-  .nav-item {
-    color: red;
-  }
-</style> -->
-
-<div class="uk-flex-inline" style="gap: 15px">
+<nav uk-dropnav class="uk-flex-inline" style="gap: 15px; margin-top: 20px;">
   <li><a href="{{ "/" | relative_url }}">Home</a></li>
+<nav uk-dropnav>
+ <ul  class="uk-subnav">
   <li>
-    <a href="{{ "/tools" | relative_url }}">Tools</a>
+    <a class="uk-text-capitalize" href="{{ "/tools" | relative_url }}" style="color: white; font-size: 15px;">Tools</a>
     {% assign groups = site.data.tools | group_by: "category" | sort: "name" %}
-    <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
-      <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
+    <div class="uk-dropdown">
+      <ul class="uk-nav uk-dropdown-nav uk-link-reset">
         {% for group in groups %}
           {% for item in group.items %}
             <li class="nav-item"><a href="{{ item.url }}" target="{{item.target}}">{{ item.name }}</a></li>
@@ -19,6 +15,8 @@
       </ul>
     </div>
   </li>
+ </ul>
+</nav>
 
   <li>
     <a href="{{ "/maps" | relative_url }}">Maps</a>
@@ -28,36 +26,45 @@
     <a href="{{ "/resources" | relative_url }}">Genomics</a>
   </li>
 
-  <li>
-    <a href="{{ "/collections" | relative_url }}">Data Collections</a>
-    {% assign genus_description = site.data.datastore-metadata.Glycine.GENUS.about_this_collection.description_Glycine %}
-    <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
-      <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
-        {% for species in genus_description.species %}
-          <li class="nav-item"><a href="/collections/#{{ genus_description.genus }}_{{ species }}"> {{ species }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
-  </li>
+<nav uk-dropnav>
+  <ul  class="uk-subnav">
+    <li>
+      <a class="uk-text-capitalize" href="{{ "/collections" | relative_url }}" style="color: white; font-size: 15px;">Data Collections</a>
+      {% assign genus_description = site.data.datastore-metadata.Glycine.GENUS.about_this_collection.description_Glycine %}
+      <div class="uk-dropdown">
+        <ul class="uk-nav uk-dropdown-nav uk-link-reset">
+          {% for species in genus_description.species %}
+            <li class="nav-item"><a href="/collections/#{{ genus_description.genus }}_{{ species }}"> {{ species }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+    </li>
+  </ul>
+</nav>
 
-  <li>
-    <a class="project_list" href="{{ "/projects" | relative_url }}">Projects</a>
-    {% if site.data.project_list %}
-    {% assign groups = site.data.project_list | sort: "short_title" %}
-    <div class="uk-navbar-dropdown uk-width-auto" uk-dropdown="delay-hide: 0;">
-      <ul class="uk-nav uk-navbar-dropdown-nav uk-link-reset">
-      {% for group in groups %}
-        <li class="nav-item"><a href="{{ group.DataStoreID | downcase | prepend: '/projects/' | relative_url }}">{{ group.short_title }}</a></li>
-      {% endfor %}
-      </ul>
-    </div>
-    {% endif %}
-  </li>
+<nav uk-dropnav>
+  <ul  class="uk-subnav">
+    <li>
+      <a class="project_list uk-text-capitalize" href="{{ "/projects" | relative_url }}" style="color: white; font-size: 15px;">Projects</a>
+      {% if site.data.project_list %}
+      {% assign groups = site.data.project_list | sort: "short_title" %}
+        <div class="uk-dropdown">
+          <ul class="uk-nav uk-dropdown-nav uk-link-reset">
+          {% for group in groups %}
+            <li class="nav-item"><a href="{{ group.DataStoreID | downcase | prepend: '/projects/' | relative_url }}">{{ group.short_title }}</a></li>
+          {% endfor %}
+          </ul>
+        </div>
+      {% endif %}
+    </li>
+  </ul>
+</nav>
 
   <li><a href="{{ "/community" | relative_url }}">Community</a></li>
 
   <li><a href="{{ "/about" | relative_url }}">About & Contact</a></li>
 
   <li><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></li>
-</div>
+  
+</nav>
 
