add hovering effect to parent nav element

--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -1,9 +1,9 @@
-<nav uk-dropnav class="uk-flex-inline" style="gap: 15px; margin-top: 20px;">
-  <li><a href="{{ "/" | relative_url }}">Home</a></li>
-<nav uk-dropnav>
- <ul  class="uk-subnav">
+<nav uk-dropnav class="uk-flex-inline">
+  <ul  class="uk-subnav">
+  <li><a class="uk-text-capitalize nav-title" href="{{ "/" | relative_url }}" style="color: white;">Home</a></li>
+
   <li>
-    <a class="uk-text-capitalize" href="{{ "/tools" | relative_url }}" style="color: white; font-size: 15px;">Tools</a>
+    <a class="uk-text-capitalize nav-title" href="{{ "/tools" | relative_url }}" style="color: white;">Tools</a>
     {% assign groups = site.data.tools | group_by: "category" | sort: "name" %}
     <div class="uk-dropdown">
       <ul class="uk-nav uk-dropdown-nav uk-link-reset">
@@ -15,21 +15,17 @@
       </ul>
     </div>
   </li>
- </ul>
-</nav>
-
+ 
   <li>
-    <a href="{{ "/maps" | relative_url }}">Maps</a>
+    <a class="uk-text-capitalize nav-title" href="{{ "/maps" | relative_url }}" style="color: white;">Maps</a>
   </li>
 
   <li>
-    <a href="{{ "/resources" | relative_url }}">Genomics</a>
+    <a class="uk-text-capitalize nav-title" href="{{ "/resources" | relative_url }}" style="color: white;">Genomics</a>
   </li>
 
-<nav uk-dropnav>
-  <ul  class="uk-subnav">
     <li>
-      <a class="uk-text-capitalize" href="{{ "/collections" | relative_url }}" style="color: white; font-size: 15px;">Data Collections</a>
+      <a class="uk-text-capitalize nav-title" href="{{ "/collections" | relative_url }}" style="color: white;">Data Collections</a>
       {% assign genus_description = site.data.datastore-metadata.Glycine.GENUS.about_this_collection.description_Glycine %}
       <div class="uk-dropdown">
         <ul class="uk-nav uk-dropdown-nav uk-link-reset">
@@ -39,13 +35,9 @@
         </ul>
       </div>
     </li>
-  </ul>
-</nav>
-
-<nav uk-dropnav>
-  <ul  class="uk-subnav">
+  
     <li>
-      <a class="project_list uk-text-capitalize" href="{{ "/projects" | relative_url }}" style="color: white; font-size: 15px;">Projects</a>
+      <a class="project_list uk-text-capitalize nav-title" href="{{ "/projects" | relative_url }}" style="color: white;">Projects</a>
       {% if site.data.project_list %}
       {% assign groups = site.data.project_list | sort: "short_title" %}
         <div class="uk-dropdown">
@@ -57,14 +49,12 @@
         </div>
       {% endif %}
     </li>
+
+  <li><a class="uk-text-capitalize nav-title" href="{{ "/community" | relative_url }}" style="color: white;">Community</a></li>
+
+  <li><a class=" uk-text-capitalize nav-title uk-text-break " href="{{ "/about" | relative_url }}" style="color: white;">About & Contact</a></li>
+
+  <li><a class=" uk-text-capitalize nav-title uk-text-break " href="{{ "/help" | relative_url }}" style="color: white;">Help & Tutorials</a></li>
   </ul>
-</nav>
-
-  <li><a href="{{ "/community" | relative_url }}">Community</a></li>
-
-  <li><a href="{{ "/about" | relative_url }}">About & Contact</a></li>
-
-  <li><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></li>
-  
 </nav>
 
