--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -32,10 +32,16 @@
 
   .nav-item {
     color: black;
+    text-wrap: nowrap;
   }
 
   .nav-item:hover {
     color: #235626;
+  }
+
+  .nav-title:hover {
+    margin-bottom: -1px;
+    border-bottom: 1px solid white;
   }
 
   
