working keyboard in main navigation

--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -1,4 +1,4 @@
-<nav uk-dropnav class="uk-flex-inline">
+<nav uk-dropnav class="uk-flex-inline" style="margin-top: 20px;">
   <ul  class="uk-subnav">
   <li><a class="uk-text-capitalize nav-title" href="{{ "/" | relative_url }}" style="color: white;">Home</a></li>
 
@@ -52,9 +52,9 @@
 
   <li><a class="uk-text-capitalize nav-title" href="{{ "/community" | relative_url }}" style="color: white;">Community</a></li>
 
-  <li><a class=" uk-text-capitalize nav-title uk-text-break " href="{{ "/about" | relative_url }}" style="color: white;">About & Contact</a></li>
+  <li><a class=" uk-text-capitalize nav-title" href="{{ "/about" | relative_url }}" style="color: white;">About & Contact</a></li>
 
-  <li><a class=" uk-text-capitalize nav-title uk-text-break " href="{{ "/help" | relative_url }}" style="color: white;">Help & Tutorials</a></li>
+  <li><a class=" uk-text-capitalize nav-title" href="{{ "/help" | relative_url }}" style="color: white;">Help & Tutorials</a></li>
   </ul>
 </nav>
 
