move custom style from pages to global-stylesheets.html, remove some custom css and replaced with uikit classes

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -48,5 +48,69 @@
     color: black;
     background-color: white;
   }
+
+.go-btn {
+  background-color: #235626;
+  color: white;
+  margin-right: 5px;
+}
+.go-btn:hover {
+  cursor: pointer;
+  background-color: #1d4720;
+  color: white;
+}
+
+
+/* Homepage custom styleing */
+.search-container {
+  display: flex; 
+  justify-content: space-between;
+}
+
+@media (max-width: 764px){
+  .search-container{
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+}
+
+@media (min-width: 1600px){
+  .col3-cornsilk{
+    background-color: cornsilk;
+  }
+  .col3-seashell{
+    background-color: seashell;
+  }
+  .col3-azure{
+    background-color: azure;
+  }
+  .col3-mistyrose{
+    background-color: mistyrose;
+  }
+  .col3-antiquewhite{
+    background-color: antiquewhite;
+  }
+}
+ 
+  @media (max-width: 1599px){
+  .cornsilk{
+    background-color: cornsilk;
+  }
+  .seashell{
+    background-color: seashell;
+  }
+  .azure{
+    background-color: azure;
+  }
+  .mistyrose{
+    background-color: mistyrose;
+  }
+  .antiquewhite{
+    background-color: antiquewhite;
+  }
+  }
+
 </style>
 
