fix responsiveness in expression page

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -73,8 +73,16 @@
     justify-content: center;
     text-align: center;
   }
-
 }
+
+@media (max-width: 598px){
+  .bar-input-group{
+    display: block;
+  text-align: center;
+
+  }
+  }
+
 
 @media (min-width: 1600px){
   .col3-cornsilk{
