create functions to disalbe buttons based on conditions add to buttons on Go Enrichment Analysis page

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -59,6 +59,10 @@
   background-color: #1d4720;
   color: white;
 }
+.go-btn:disabled {
+  pointer-events: none;
+  background: white;
+}
 
 
 /* Homepage custom styleing */
@@ -78,7 +82,7 @@
 @media (max-width: 598px){
   .bar-input-group{
     display: block;
-  text-align: center;
+    text-align: center;
 
   }
   }
