add missing buttons Other Legumes, Expression Resources, Help & Tutorials to middle button group

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -87,6 +87,9 @@
   .col3-antiquewhite{
     background-color: antiquewhite;
   }
+  .col3-cumstomgreen{
+    background-color: #EAFAF1;
+  }
 }
  
   @media (max-width: 1599px){
@@ -104,6 +107,9 @@
   }
   .antiquewhite{
     background-color: antiquewhite;
+  }
+  .customgreen {
+    background-color: #EAFAF1;
   }
   }
 
