fix navbar padding

--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -1,4 +1,4 @@
-<li uk-dropnav class="uk-flex-inline" style="margin-top: 20px;">
+<li uk-dropnav class="uk-flex-inline">
   <ul  class="uk-subnav">
   <li><a class="uk-text-capitalize nav-title" href="{{ "/" | relative_url }}" style="color: white;">Home</a></li>
 
