--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,7 +39,7 @@
 
   </script>
 
-  <div class="uk-container uk-container-expand">
+  <div class="uk-container uk-container-expand uk-padding-small">
     <nav class="uk-navbar">
       <div class="uk-navbar-left uk-text-truncate">
         <a class="uk-navbar-item uk-logo uk-text-truncate" href="{{ "/" | relative_url }}">
