fix <dl> elements must only directly contain properly-ordered <dt> and <dd> groups error

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h2>{{ page.projects.short_title }}</h2>
-
+<dl>
 <dt>
   <dd><h3>Description:</h3></dd> 
   <dd>{{ page.projects.description }}</dd>
@@ -45,5 +45,6 @@ layout: default
     {% endfor %}
   {% endfor %}
 </dt>
+</dl>
 
-<h4><a href="/projects/">Back to Projects index page</a></dd></h4>
+<h4><dl><dd><a href="/projects/">Back to Projects index page</a></dd></dl></h4>
