--- a/_layouts/sgn_issues.html
+++ b/_layouts/sgn_issues.html
@@ -14,12 +14,12 @@ layout: default
   <dl>
   <dt>
     <dd><strong>Authors:</strong></dd> 
-    <dd>{{ item.authors}}</dd>
-    <br>
+    <dd class="uk-margin-bottom">{{ item.authors}}</dd>
+    
     
     <dd><strong>Abstract:</strong></dd>
-    <dd>{{ item.abstract}}</dd>
-    <br>
+    <dd class="uk-margin-bottom">{{ item.abstract}}</dd>
+   
 
     {% if item.file != "" and item.file != nil %}
       <dd><strong>Submitted paper: </strong></dd>
