add sub-category into accordion

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -42,6 +42,10 @@
     margin-bottom: -1px;
     border-bottom: 1px solid white;
   }
+
+  .text-size-med{
+    font-size: 18px;
+  }
   
   body {
     color: black;
