write logic to handle opening correct data collection accordion from main nav link

--- a/_includes/navbar-menu-items.html
+++ b/_includes/navbar-menu-items.html
@@ -30,7 +30,7 @@
       <div class="uk-dropdown">
         <ul class="uk-nav uk-dropdown-nav uk-link-reset">
           {% for species in genus_description.species %}
-            <li class="nav-item uk-text-capitalize"><a href="/collections/#{{ genus_description.genus }}_{{ species }}"> {{ species }}</a></li>
+            <li class="nav-item uk-text-capitalize"><a id={{species}} href="/collections/#{{ genus_description.genus }}_{{ species }}" > {{ species }}</a></li>
           {% endfor %}
         </ul>
       </div>
@@ -57,14 +57,3 @@
   <li><a class=" uk-text-capitalize nav-title" href="{{ "/help" | relative_url }}" style="color: white;">Help & Tutorials</a></li>
   </ul>
 </li>
-
-<script>
-
-  function getId(){
-    id = Object.id
-
-    console.log(id)
-  }
-
-
-</script>
