ontology/index.html working details button animation, fix button styling

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -49,6 +49,10 @@
   .text-size-large{
     font-size: 20px;
   }
+
+  .toggle-top-margin{
+    margin-top: 4px;
+  }
   
   body {
     color: black;
