--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -29,6 +29,19 @@
       font-family: serif;
       font-weight: bold;
   }
+
+  .toggle-top-margin{
+    margin-top: 4px;
+  }
+
+  .glass-morphism{
+    backdrop-filter: blur(3px) saturate(200%);
+    -webkit-backdrop-filter: blur(16px) saturate(200%);
+    background-color: rgba(0, 85, 6, 0.25);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+  }
+
   body {
     color: black;
     background-color: white;
