--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -41,15 +41,15 @@
 
   <div class="uk-container uk-container-expand uk-padding-small">
     <nav class="uk-navbar">
-      <div class="uk-navbar-left uk-text-truncate">
-        <a class="uk-navbar-item uk-logo uk-text-truncate" href="{{ "/" | relative_url }}">
+      <div class="uk-navbar-left ">
+        <a class="uk-navbar-item uk-logo " href="{{ "/" | relative_url }}">
           {% if site.logo %}
           <img class="uk-margin-small-right" src="{{ site.logo | relative_url }}" width="47" height="47" alt="soybase logo"/>
           {% endif %}
-          <div class="uk-text-truncate">
+          <div class="uk-text-break">
             {{ site.title }}
             {% if site.subtitle %}
-            <div class="uk-navbar-subtitle uk-text-truncate">{{ site.subtitle }}</div>
+            <div class="uk-navbar-subtitle ">{{ site.subtitle }}</div>
             {% endif %}
           </div>
         </a>
