create custom width for homepage input

--- a/_includes/global-stylesheets.html
+++ b/_includes/global-stylesheets.html
@@ -43,6 +43,10 @@
     border-bottom: 1px solid white;
   }
 
+  .custom-width {
+    width: 170px;
+  }
+
   .text-size-med{
     font-size: 18px;
   }
