--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -101,7 +101,7 @@
       <li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" title="Follow us on Twitter"><span uk-icon="twitter"></span> Twitter</a></li>
       {% endif %}
       {% if site.newsletter %}
-      <li><a href="{{ site.newletter }}" target="_blank" title="Subscribe to our newsletter"><span uk-icon="mail"></span> Newsletter</a></li>
+      <li><a href="{{ site.newsletter }}" target="_blank" title="Subscribe to our newsletter"><span uk-icon="mail"></span> Newsletter</a></li>
       {% endif %}
       {% if site.github_username %}
       <li><a href="https://github.com/{{ site.github_username }}" target="_blank" title="Fork us on GitHub"><span uk-icon="github"></span> GitHub</a></li>
