Revert "Update alerts.html (#255)"
This reverts commit cd39bba3bbd15fdefcfc4fa2fdd65b46ce5002b5.

--- a/_includes/alerts.html
+++ b/_includes/alerts.html
@@ -1,4 +1,5 @@
-<div class="uk-alert-danger" uk-alert>
-    <a href class="uk-alert-close" uk-close></a>
-    <p>This government website will not be updated during a funding lapse. Information may not be up-to-date, transactions submitted via this website may not be processed, and inquiries may not be responded to until appropriations are enacted</p>
+<div style="color:white;">
+&nbsp;<b>Welcome to the new website!</b> See the legacy site <a href='https://legacy.soybase.org/' target="_blank" style="color:Pink"><u>here</u></a>. 
+Questions/suggestions? <a href="/about#contact" style="color:Pink"><u>contact us</u>.</a>
+Click the bell (<a class="tm-no-underline" title="Toggle alerts" uk-toggle="target: #alerts; animation: uk-animation-fade" style="color:Pink"><span uk-icon="bell"></span></a>) to toggle this alert.
 </div>
